--- a/page2.html
+++ b/page2.html
@@ -9,11 +9,15 @@
 <body>
 
 <header class="header">
-  <img src="images/base.jpg" alt="Putorana Plateau" class="header-image">
   <h1 class="header-title">Visit Putorana Plateau</h1>
 </header>
 
 <main class="main-content">
+  <!-- БАННЕР base.jpg -->
+  <div class="banner">
+    <img src="images/base.jpg" alt="Putorana Plateau" class="banner-image fade-in">
+  </div>
+
   <section class="section fade-in">
     <h2>How to Get There</h2>
     <ul>
