--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,10 @@
 <body>
 
 <header class="header">
-  <h1 class="header-title">Putorana Plateau</h1>
+  <div class="lang-switch">
+    <button id="switch-lang">EN</button>
+  </div>
+  <h1 class="header-title" data-ru="Putorana Plateau" data-en="Putorana Plateau">Putorana Plateau</h1>
 </header>
 
 <main class="main-content">
@@ -18,43 +21,46 @@
   </div>
 
   <section class="section fade-in">
-    <h2>General Information</h2>
-    <p>Putorana is a large plateau in northern Krasnoyarsk, above the Arctic Circle. It is almost untouched by people. There are many rivers, lakes, waterfalls, and high cliffs. Tourists come here to see unusual nature and beautiful views.</p>
+    <h2 data-ru="Общая информация" data-en="General Information">Общая информация</h2>
+    <p data-ru="Плато Путорана — это большое плато на севере Красноярского края, за Полярным кругом. Практически нетронуто людьми. Здесь много рек, озёр, водопадов и высоких скал. Туристы приезжают, чтобы увидеть необычную природу и красивые виды."
+       data-en="Putorana is a large plateau in northern Krasnoyarsk, above the Arctic Circle. It is almost untouched by people. There are many rivers, lakes, waterfalls, and high cliffs. Tourists come here to see unusual nature and beautiful views.">
+       Плато Путорана — это большое плато на севере Красноярского края, за Полярным кругом. Практически нетронуто людьми. Здесь много рек, озёр, водопадов и высоких скал. Туристы приезжают, чтобы увидеть необычную природу и красивые виды.
+    </p>
   </section>
 
   <section class="section fade-in">
-    <h2>Nature and Landscape</h2>
+    <h2 data-ru="Природа и ландшафт" data-en="Nature and Landscape">Природа и ландшафт</h2>
     <img src="images/1.jpg" alt="Lake in Putorana" class="section-image fade-in">
     <ul>
-      <li>The plateau has taiga and tundra.</li>
-      <li>Many clean lakes with clear water.</li>
-      <li>High waterfalls, deep canyons, steep cliffs.</li>
-      <li>Summer is cool, +15–16 °C.</li>
-      <li>Winter is very cold, −40 °C.</li>
-      <li>White nights in summer, northern lights in winter.</li>
+      <li data-ru="На плато растут тайга и тундра." data-en="The plateau has taiga and tundra.">На плато растут тайга и тундра.</li>
+      <li data-ru="Много чистых озёр с прозрачной водой." data-en="Many clean lakes with clear water.">Много чистых озёр с прозрачной водой.</li>
+      <li data-ru="Высокие водопады, глубокие каньоны, крутые скалы." data-en="High waterfalls, deep canyons, steep cliffs.">Высокие водопады, глубокие каньоны, крутые скалы.</li>
+      <li data-ru="Лето прохладное, +15–16 °C." data-en="Summer is cool, +15–16 °C.">Лето прохладное, +15–16 °C.</li>
+      <li data-ru="Зима очень холодная, −40 °C." data-en="Winter is very cold, −40 °C.">Зима очень холодная, −40 °C.</li>
+      <li data-ru="Белые ночи летом, северное сияние зимой." data-en="White nights in summer, northern lights in winter.">Белые ночи летом, северное сияние зимой.</li>
     </ul>
   </section>
 
   <section class="section fade-in">
-    <h2>Animals and Plants</h2>
+    <h2 data-ru="Животные и растения" data-en="Animals and Plants">Животные и растения</h2>
     <ul>
-      <li>Rare animals: reindeer, wolverines, bears.</li>
-      <li>Many birds: eagles and falcons.</li>
-      <li>Moss, lichen, shrubs, and rare flowers grow in the tundra.</li>
+      <li data-ru="Редкие животные: олени, росомахи, медведи." data-en="Rare animals: reindeer, wolverines, bears.">Редкие животные: олени, росомахи, медведи.</li>
+      <li data-ru="Много птиц: орлы и соколы." data-en="Many birds: eagles and falcons.">Много птиц: орлы и соколы.</li>
+      <li data-ru="Мох, лишайники, кустарники и редкие цветы растут в тундре." data-en="Moss, lichen, shrubs, and rare flowers grow in the tundra.">Мох, лишайники, кустарники и редкие цветы растут в тундре.</li>
     </ul>
   </section>
 
   <section class="section fade-in">
-    <h2>Why Visit</h2>
+    <h2 data-ru="Почему стоит посетить" data-en="Why Visit">Почему стоит посетить</h2>
     <ul>
-      <li>Take photos of lakes and mountains.</li>
-      <li>Go hiking and sightseeing.</li>
-      <li>Watch animals in their natural home.</li>
-      <li>Relax from city noise.</li>
+      <li data-ru="Сделать фотографии озёр и гор." data-en="Take photos of lakes and mountains.">Сделать фотографии озёр и гор.</li>
+      <li data-ru="Ходить в походы и осматривать достопримечательности." data-en="Go hiking and sightseeing.">Ходить в походы и осматривать достопримечательности.</li>
+      <li data-ru="Наблюдать животных в их естественной среде." data-en="Watch animals in their natural home.">Наблюдать животных в их естественной среде.</li>
+      <li data-ru="Отдохнуть от городского шума." data-en="Relax from city noise.">Отдохнуть от городского шума.</li>
     </ul>
   </section>
 
-  <a href="page2.html" class="next-page fade-in">Go to Travel Info →</a>
+  <a href="page2.html" class="next-page fade-in" data-ru="Перейти к информации о путешествии →" data-en="Go to Travel Info →">Перейти к информации о путешествии →</a>
 </main>
 
 <script src="js/main.js"></script>
