--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,10 @@
 <body>
 
 <header class="header">
-  <h1 class="header-title">Visit Putorana Plateau</h1>
+  <div class="lang-switch">
+    <button id="switch-lang">EN</button>
+  </div>
+  <h1 class="header-title" data-ru="Visit Putorana Plateau" data-en="Visit Putorana Plateau">Visit Putorana Plateau</h1>
 </header>
 
 <main class="main-content">
@@ -18,56 +21,56 @@
   </div>
 
   <section class="section fade-in">
-    <h2>How to Get There</h2>
+    <h2 data-ru="Как добраться" data-en="How to Get There">Как добраться</h2>
     <ul>
-      <li>Nearest big city: Norilsk.</li>
-      <li>Fly by helicopter or go by boat.</li>
-      <li>Summer is best for travel.</li>
-      <li>Travel with a guide is safer.</li>
+      <li data-ru="Ближайший большой город: Норильск." data-en="Nearest big city: Norilsk.">Ближайший большой город: Норильск.</li>
+      <li data-ru="Лететь на вертолёте или идти на лодке." data-en="Fly by helicopter or go by boat.">Лететь на вертолёте или идти на лодке.</li>
+      <li data-ru="Лучшее время для поездки — лето." data-en="Summer is best for travel.">Лучшее время для поездки — лето.</li>
+      <li data-ru="Безопаснее с гидом." data-en="Travel with a guide is safer.">Безопаснее с гидом.</li>
     </ul>
   </section>
 
   <section class="section fade-in">
-    <h2>Best Time to Visit</h2>
+    <h2 data-ru="Лучшее время для посещения" data-en="Best Time to Visit">Лучшее время для посещения</h2>
     <ul>
-      <li>June to August.</li>
-      <li>Warm weather, less rain.</li>
-      <li>Winter only for special expeditions.</li>
+      <li data-ru="Июнь–август." data-en="June to August.">Июнь–август.</li>
+      <li data-ru="Тёплая погода, меньше дождей." data-en="Warm weather, less rain.">Тёплая погода, меньше дождей.</li>
+      <li data-ru="Зимой только для специальных экспедиций." data-en="Winter only for special expeditions.">Зимой только для специальных экспедиций.</li>
     </ul>
   </section>
 
   <section class="section fade-in">
-    <h2>What to Take</h2>
+    <h2 data-ru="Что взять с собой" data-en="What to Take">Что взять с собой</h2>
     <img src="images/2.jpg" alt="Hiking in Putorana" class="section-image fade-in">
     <ul>
-      <li>Hiking boots, warm jacket, hat, gloves.</li>
-      <li>Backpack with water and food.</li>
-      <li>First-aid kit, map, compass or GPS.</li>
-      <li>Camera and spare batteries.</li>
+      <li data-ru="Походные ботинки, тёплая куртка, шапка, перчатки." data-en="Hiking boots, warm jacket, hat, gloves.">Походные ботинки, тёплая куртка, шапка, перчатки.</li>
+      <li data-ru="Рюкзак с водой и едой." data-en="Backpack with water and food.">Рюкзак с водой и едой.</li>
+      <li data-ru="Аптечка, карта, компас или GPS." data-en="First-aid kit, map, compass or GPS.">Аптечка, карта, компас или GPS.</li>
+      <li data-ru="Камера и запасные батареи." data-en="Camera and spare batteries.">Камера и запасные батареи.</li>
     </ul>
   </section>
 
   <section class="section fade-in">
-    <h2>Safety Rules</h2>
+    <h2 data-ru="Правила безопасности" data-en="Safety Rules">Правила безопасности</h2>
     <ul>
-      <li>Go only with a guide or group.</li>
-      <li>Do not break plants or leave trash.</li>
-      <li>Stay away from cliff edges and waterfalls.</li>
-      <li>No strong medical help available.</li>
+      <li data-ru="Ходить только с гидом или группой." data-en="Go only with a guide or group.">Ходить только с гидом или группой.</li>
+      <li data-ru="Не ломать растения и не оставлять мусор." data-en="Do not break plants or leave trash.">Не ломать растения и не оставлять мусор.</li>
+      <li data-ru="Держаться подальше от обрывов и водопадов." data-en="Stay away from cliff edges and waterfalls.">Держаться подальше от обрывов и водопадов.</li>
+      <li data-ru="Нет серьёзной медицинской помощи поблизости." data-en="No strong medical help available.">Нет серьёзной медицинской помощи поблизости.</li>
     </ul>
   </section>
 
   <section class="section fade-in">
-    <h2>Short 4–6 Days Route</h2>
+    <h2 data-ru="Маршрут на 4–6 дней" data-en="Short 4–6 Days Route">Маршрут на 4–6 дней</h2>
     <ul>
-      <li>Day 1: travel to Norilsk, prepare for flight.</li>
-      <li>Day 2: helicopter or boat to the base, explore nature.</li>
-      <li>Days 3–5: hiking, waterfalls, lakes, watch animals.</li>
-      <li>Day 6: return to Norilsk, go home.</li>
+      <li data-ru="День 1: поездка в Норильск, подготовка к вылету." data-en="Day 1: travel to Norilsk, prepare for flight.">День 1: поездка в Норильск, подготовка к вылету.</li>
+      <li data-ru="День 2: вертолёт или лодка до базы, исследование природы." data-en="Day 2: helicopter or boat to the base, explore nature.">День 2: вертолёт или лодка до базы, исследование природы.</li>
+      <li data-ru="Дни 3–5: походы, водопады, озёра, наблюдение за животными." data-en="Days 3–5: hiking, waterfalls, lakes, watch animals.">Дни 3–5: походы, водопады, озёра, наблюдение за животными.</li>
+      <li data-ru="День 6: возвращение в Норильск, домой." data-en="Day 6: return to Norilsk, go home.">День 6: возвращение в Норильск, домой.</li>
     </ul>
   </section>
 
-  <a href="index.html" class="next-page fade-in">← Back to Info</a>
+  <a href="index.html" class="next-page fade-in" data-ru="← Назад к информации" data-en="← Back to Info">← Назад к информации</a>
 </main>
 
 <script src="js/main.js"></script>
