--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<div class="top-author">
+  By Vladislav Martyanov
+</div>
 <header class="header">
   <div class="lang-switch">
     <button id="switch-lang">EN</button>
@@ -66,5 +68,6 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
