--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="top-author">
-  By Vladislav Martyanov
+  Prog. By Vladislav Martyanov(VΔIR∅py)
 </div>
 <header class="header">
   <div class="lang-switch">
@@ -78,6 +78,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
